# inferor_osyncstream

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
include/inferior/: osyncstream.hpp  streambuf_locks.hpp
sample/: CMakeLists.txt  sample.cpp
test/: CMakeLists.txt  constant.hpp  test.cpp  test_parallel.cpp  test_streambuf_locks.cpp
